2009-01-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Suppress loading Lisp init files.
	* configure.ac: rename axiom_quiet_flag to fricas_quiet_flag,
	add to it option to suppres loading init files.
	src/lisp/Makefile.in: Add fricas_quiet_flag to Lisp
	command line.
	src/lisp/fricas-lisp.lisp: Hardcode 'norc' option into
	dumped Clisp image.

2009-01-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/input/elemnum.input.pamphlet: Make sure tests run
	with Clisp-2.47

2009-01-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/fricas-lisp.lisp: For ECL on Darwin add :unix
	to featues.

2009-01-20  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/rec.spad.pamphlet: modify output format of ADEs
	src/input/mantepse.input.pamphlet: fix typo

2009-01-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: Avoid recompliling algebra
	twice.

2009-01-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/muldep.spad.pamphlet: Doc fix.

2009-01-20  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/Makefile.in: add STNSR

	* src/algebra/mantepse.spad.pamphlet,
	src/input/mantepse.input.pamphlet: implement a different
	(better?) approach to homogeneous equations, implement mixed
	q-equations and recurrences, options use "arbitrary" instead of
	special integers now

2009-01-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fraction.spad.pamphlet: Remove unused
	import of MatrixCommonDenominator.

2009-01-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Simplify logarithms of constants.
	* src/algebra/muldep.spad.pamphlet: new file.
	src/algebra/efstruc.spad.pamphlet: use 
	logDependenceQ from the new file.

2009-01-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/boo3.input: Buid FlexibleArray during
	bootstrap phase.

2009-01-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp, src/lisp/fricas-lisp.lisp: Allow
	build even if Clisp lacks FFI.
