@@ -1,3 +1,9 @@
+2009-01-21  Martin Rubey  <martin.rubey@univie.ac.at>
+
+	* src/algebra/polycat.spad.pamphlet: modify implementation of
+	map$POLYLIFT so it doesn't introduce new zeros anymore, add test
+	* src/algebra/Makefile.in, src/input/Makefile.in: adapt
+
 2009-01-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	Suppress loading Lisp init files.
